--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ imports/bill/tmp.doc
 imports/bill/tmp.html
 imports/bill/output.jsonl
 imports/interpellation/files
+imports/ivod/current-id
+imports/ivod/html
