gitignore law.pdf

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ imports/interpellation/files
 imports/ivod/current-id
 imports/ivod/html
 imports/meet/meet-proceeding-*
+imports/law/law.pdf
+imports/law/law.pdf.txt
