--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ imports/bill/bill-html
 imports/bill/tmp.doc
 imports/bill/tmp.html
 imports/bill/output.jsonl
+imports/bill/output.jsonl.*
 imports/interpellation/files
 imports/ivod/current-id
 imports/ivod/html
