ignore ivod file

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ imports/bill/output.jsonl.*
 imports/interpellation/files
 imports/ivod/current-id
 imports/ivod/html
+imports/ivod/ivod-gazette
+imports/ivod/ivod-transcript
 imports/meet/meet-proceeding-*
 imports/law/law.pdf
 imports/law/law.pdf.txt
