add more gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,22 @@
 .*.swp
 cache
 config.php
-imports/gazette
+imports/gazette/agenda-doc
+imports/gazette/agenda-docx
+imports/gazette/agenda-html
+imports/gazette/agenda-pic
+imports/gazette/agenda-tikahtml
+imports/gazette/agenda-txt
+imports/gazette/docfile
+imports/gazette/htmlfile
+imports/gazette/picfile
+imports/gazette/txtfile
+imports/gazette/gazette-agenda-data
+imports/gazette/gazette-data
+imports/gazette/gazette-html
+imports/gazette/gazette-pdf
+imports/gazette/gazette-txt
+imports/gazette/gazette-detail-html
 imports/meet/meet.jsonl
 imports/meet/ppg_meet_page
 imports/meet/ppg_meet_page_json
