--- a/.gitignore
+++ b/.gitignore
@@ -17,16 +17,16 @@ imports/gazette/gazette-html
 imports/gazette/gazette-pdf
 imports/gazette/gazette-txt
 imports/gazette/gazette-detail-html
-imports/meet/meet.jsonl
 imports/meet/ppg_meet_page
 imports/meet/ppg_meet_page_json
+imports/meet/meet-data
+imports/meet/meet-sub-data
 imports/bill/bill-doc-parsed
 imports/bill/bill-docgz
 imports/bill/bill-html
+imports/bill/bill-data
 imports/bill/tmp.doc
 imports/bill/tmp.html
-imports/bill/output.jsonl
-imports/bill/output.jsonl.*
 imports/interpellation/files
 imports/ivod/current-id
 imports/ivod/current-full-id
