gitignore ivod-data

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ imports/ivod/current-id
 imports/ivod/current-full-id
 imports/ivod/html
 imports/ivod/ivod-gazette
+imports/ivod/ivod-data
 imports/ivod/ivod-transcript
 imports/meet/meet-proceeding-*
 imports/law/law.pdf
